--- a/_includes/table-mpmct.html
+++ b/_includes/table-mpmct.html
@@ -1,7 +1,7 @@
 <table class="table">
     <thead>
       <tr>
-        <th><i>Tools:</i></th>
+        <th><i>Công cụ:</i></th>
         <th> </th>
       </tr>
     </thead>
@@ -11,7 +11,7 @@
         <td><a href="https://pytorch.org/" title="pytorch">Pytorch</a></td>
       </tr>
       <tr>
-        <td>MLOps to run realtime:</td>
+        <td>MLOps để chạy thời gian thật:</td>
         <td>
           <a href="https://aws.amazon.com/vi/ec2/?ec2-whats-new.sort-by=item.additionalFields.postDateTime&ec2-whats-new.sort-order=desc" title="ec2">AWS EC2</a> , 
           <a href="https://aws.amazon.com/lambda/" title="lambda">AWS Lambda</a> , 
