--- a/_includes/table-ocr.html
+++ b/_includes/table-ocr.html
@@ -1,13 +1,13 @@
 <table class="table">
     <thead>
       <tr>
-        <th><i>Tools:</i></th>
+        <th><i>Công cụ:</i></th>
         <th> </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>Training model</td>
+        <td>Huấn luyện</td>
         <td>
             <a href="https://github.com/PaddlePaddle/PaddleOCR" title="PaddleOCR repository">PaddleOCR</a> , 
             <a href="https://aws.amazon.com/vi/ec2/?ec2-whats-new.sort-by=item.additionalFields.postDateTime&ec2-whats-new.sort-order=desc" title="EC2">AWS EC2</a> , 
@@ -15,11 +15,11 @@
         </td>
       </tr>
       <tr>
-        <td>Monitor, Management training process</td>
+        <td>Theo dõi, đánh giá, quản lí quá trình huấn luyện</td>
         <td><a href="https://wandb.ai/site" title="wandb">Weights & Biases</a></td>
       </tr>
       <tr> 
-        <td>Deploy model</td>
+        <td>Triển khai</td>
         <td><a href="https://fastapi.tiangolo.com/" title="fastapi">FastAPI</a></td>
       </tr>
     </tbody>
