--- a/_includes/table-contact.html
+++ b/_includes/table-contact.html
@@ -1,7 +1,7 @@
 <table class="table">
     <thead>
       <tr>
-        <th><i>Tools:</i></th>
+        <th><i>Công cụ:</i></th>
         <th> </th>
       </tr>
     </thead>
