--- a/_includes/header.html
+++ b/_includes/header.html
@@ -65,8 +65,8 @@
                     VI
                   </a>
                   <div class="navbar-dropdown">
-                      <a href="{{ 'https://phattruongai.github.io' | append: page.url }}" class="navbar-item">English</a>
-                      <a href="{{ page.url }}" class="navbar-item is-active">Vietnamese</a>
+                      <a href="{{ 'https://phattruongai.github.io' | append: page.url }}" class="navbar-item">Tiếng Anh</a>
+                      <a href="{{ page.url }}" class="navbar-item is-active">Tiếng Việt</a>
                   </div>
                 </div>
               </div>
