--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="has-text-centered">
-            <a href="{{ site.baseurl }}{{ post.url }}" class="button is-primary">Read more</a>
+            <a href="{{ site.baseurl }}{{ post.url }}" class="button is-primary">Xem thêm</a>
         </div>
     </div>
     <footer class="card-footer">
