--- a/_includes/tag.html
+++ b/_includes/tag.html
@@ -1,3 +1,3 @@
-<span class="tag {% if include.style %} {{ include.style }} {% else %} is-primary {% endif %}">
+<a class="tag {% if include.style %} {{ include.style }} {% else %} is-primary {% endif %}" href="/tag/{{ include.tag }}">
     {{ include.tag }}
-</span>
+</a>
