--- a/_includes/post-card-large.html
+++ b/_includes/post-card-large.html
@@ -15,6 +15,11 @@
             <a class="title is-4" href="{{ site.baseurl }}{{ post.url }}">{{ post.title}}</a>
             {% endif %}
             </div>
+            <div class="tags">
+                {% for tag in post.tags %}
+                  {% include tag.html tag=tag %}
+                {% endfor %}
+              </div>
             <div class="block">
             {% if post.summary %}
                 {{ post.summary | markdownify }}
