--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -9,6 +9,11 @@
         <div class="content">
             <a class="title is-5" href="{{ site.baseurl }}{{ post.url }}">{{ post.title}}</a>
         </div>
+        <div class="tags">
+            {% for tag in post.tags %}
+                {% include tag.html tag=tag %}
+            {% endfor %}
+        </div>
         <!-- <div class="has-text-centered">
             <a href="{{ site.baseurl }}{{ post.url }}" class="button is-primary is-small">Xem thêm</a>
         </div> -->
