--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,17 +7,23 @@ layout: default
     {% include toc.html html=content class='menu-list' h_min=2 h_max=3 contents_title=contentsTitle %}
 {% endif %}
 
-<div class="content">
-
-    <p>Published: {{ page.date | date: "%b %-d, %Y" }} by {{ page.author }}</p>
-
-    {{ content }}
+<div class="content"><p>Published: {{ page.date | date: "%b %-d, %Y" }} by {{ page.author }}</p></div>
+<div class="level">
+  <div class="level-left">
+    <div class="level-item">
+      <p>Tags:</p>
+    </div>
+    <div class="level-item">
+      <div class="tags">
+        {% for tag in page.tags %}
+          {% include tag.html tag=tag %}
+        {% endfor %}
+      </div>
+    </div>
+  </div>
 </div>
-
-<div class="tags">
-    {% for tag in page.tags %}
-      {% include tag.html tag=tag %}
-    {% endfor %}
+<div class="content">
+    {{ content }}
 </div>
 
 {% unless site.hide_share_buttons %}
