--- a/_includes/fb-comment.html
+++ b/_includes/fb-comment.html
@@ -9,6 +9,6 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
   </script>
-  <div class="fb-comments" data-href="{{ page.url | absolute_url }}" data-width="100%" data-numposts="5"></div>
+  <div class="fb-comments" data-href="{{ site.url | append: page.url  }}" data-width="100%" data-numposts="5"></div>
   <noscript>Please enable JavaScript to view the comments powered by Facebook.</noscript>
 {%- endif -%}
