--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
     {% include toc.html html=content class='menu-list' h_min=2 h_max=3 contents_title=contentsTitle %}
 {% endif %}
 
-<div class="content"><p>Published: {{ page.date | date: "%b %-d, %Y" }} by {{ page.author }}</p></div>
+<div class="content has-text-black-bis"><p>Published: {{ page.date | date: "%b %-d, %Y" }} by {{ page.author }}</p></div>
 <div class="level">
   <div class="level-left">
     <div class="level-item">
@@ -22,7 +22,7 @@ layout: default
     </div>
   </div>
 </div>
-<div class="content">
+<div class="content has-text-black-bis">
     {{ content }}
 </div>
 
