--- a/_includes/post-card-large.html
+++ b/_includes/post-card-large.html
@@ -1,38 +1,23 @@
 <div class="card">
-    {% if post.image %}
-    <div class="card-image">
-            <!--    -->
-    </div>
-    {% else %}
-    <header class="card-header">
-        <a class="card-header-title" href="{{ site.baseurl }}{{ post.url }}">{{ post.title}}</a>
-    </header>
-    {% endif %}
     <div class="card-content">
         <div class="content">
-            <div class="block">
-            {% if post.image %}
             <a class="title is-4" href="{{ site.baseurl }}{{ post.url }}">{{ post.title}}</a>
-            {% endif %}
-            </div>
-            <div class="tags">
-                {% for tag in post.tags %}
-                  {% include tag.html tag=tag %}
-                {% endfor %}
-              </div>
-            <div class="block">
-            {% if post.summary %}
-                {{ post.summary | markdownify }}
-            {% else %}
-                <p>{{ post.excerpt }}</p>
-            {% endif %}
-            </div>
         </div>
-        <div class="has-text-centered">
-            <a href="{{ site.baseurl }}{{ post.url }}" class="button is-primary">Xem thêm</a>
+        <div class="content is-small"><em>Published: {{ post.date | date: "%b %-d, %Y" }}</em></div>
+        <div class="tags">
+            {% for tag in post.tags %}
+              {% include tag.html tag=tag %}
+            {% endfor %}
+        </div>
+        <div class="block">
+            <div class="content">
+                {% if post.summary %}
+                    {{ post.summary | markdownify }}
+                    <a href="{{ site.baseurl }}{{ post.url }}"><em>Read more</em></a>
+                {% else %}
+                    <p>{{ post.excerpt }}</p>
+                {% endif %}
+            </div>
         </div>
     </div>
-    <footer class="card-footer">
-        <p class="card-footer-item">Published: {{ post.date | date: "%b %-d, %Y" }}</p>
-    </footer>
 </div>
