--- a/_includes/tag.html
+++ b/_includes/tag.html
@@ -1,3 +1,3 @@
-<a class="tag {% if include.style %} {{ include.style }} {% else %} is-primary {% endif %}" href="/vi/tag/{{ include.tag }}">
+<a class="tag has-background-grey-dark {% if include.style %} {{ include.style }} {% else %} is-primary {% endif %}" href="/tag/{{ include.tag }}">
     {{ include.tag }}
 </a>
