--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -72,7 +72,7 @@
     {% endif %}
 {% endcapture %}{% assign tocWorkspace = '' %}
 
-<div class="contents">
+<div class="contents has-text-black-bis">
     <div class="menu">
         <p class="menu-label">{{ include.contents_title }}</p>
         {{ my_toc | markdownify | strip }}
