--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -21,7 +21,7 @@
             </div>
             <div class="block">
                 {% if page.hero_link %}
-                    <a href="{{ page.hero_link | relative_url }}" class="button is-dark is-large is-inverted is-outlined">{{ page.hero_link_text }}</a>
+                    <a href="{{ page.hero_link | relative_url }}" class="button is-dark is-large is-outlined">{{ page.hero_link_text }}</a>
                 {% endif %}
             </div>
 
