--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,6 @@
 ---
 ---
-$primary: #351658;
+$primary: #84ceeb;
 $dimensions: 16 24 32 48 64 96 128 200;
 // Import Main CSS file from theme
 @import "main";
