--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,5 +1,6 @@
 {% if page.comments %}
   <div class="column is-12">
-  {% include fb-comment.html %}
+  <!-- {% include fb-comment.html %} -->
+  {% include powr-comment.html %}
   </div>
 {% endif %}
